# cliwant

./: .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/api/: __init__.py  delivery.py  documents.py  enrichment.py  transactions.py
backend/src/jobs/: __init__.py
backend/src/models/: __init__.py  enriched_context.py  monthly_document.py  transaction.py  user_config.py
backend/src/services/: __init__.py  ai_service.py  document_service.py  email_service.py  popbill_service.py  slack_service.py
backend/src/services/tax_context/: __init__.py
backend/src/utils/: __init__.py  encryption.py  masking.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_transactions_api.py
backend/tests/unit/: test_popbill_service.py  test_utils.py
prds/ai-tax-assistant-v1/: README.md  detailed-policy.md  feature-spec.md  tech-spec.md
